@@ -1,3 +1,5 @@
+2006/8/17 -- released version 20060817_trunk
+
 2006/8/16 -- released version 20060816_trunk
 
 * Allow several Mailservers to be specified in Mailhost
